sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:17: error: not found: value echange1
  } while (echange1||echange2)
           ^AlgCocktailSort1:17: error: not found: value echange2
  } while (echange1||echange2)
                     ^